--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -1,6 +1,6 @@
 <% content_for :title do %>业务看板<% end %>
-<input type='hidden' id="from_org_id" value='<%= params[:from_org_id] %>' />
-<input type='hidden' id="children_org_ids" value='<%= params[:children_org_ids] %>' />
+<h3 id="from_org_id" />
+<h3 id="children_org_ids" />
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
