--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -1,6 +1,6 @@
 <% content_for :title do %>业务看板<% end %>
 <input type='hidden' id="from_org_id" data-val="<%= params[:from_org_id] %>"/>
-<input type='hidden' id="children_org_ids" data-val="<%= params[:children_org_ids].to_json %>"/>
+<input type='hidden' id="children_org_ids" data-val='<%= params[:children_org_ids].to_json %>'/>
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
