change progress_bar html

--- a/dashboards/progress_bars.erb
+++ b/dashboards/progress_bars.erb
@@ -1,8 +1,10 @@
-<% content_for :title do %>日营业额统计图<% end %>
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="4">
-      <div data-id="progress_bars" data-view="ProgressBars" data-title="Project Bars"></div>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="3">
+      <div data-id="progress_bars_carrying_fee" data-view="ProgressBars" data-title="运费统计"></div>
+    </li>
+    <li data-row="5" data-col="1" data-sizex="2" data-sizey="3">
+      <div data-id="progress_bars_goods_num" data-view="ProgressBars" data-title="货物数量统计"></div>
     </li>
   </ul>
 </div>
